[package]
name = "trusted-setup"
version = "0.0.1"
authors = ["Georgios Gkitsas <ggkitsas@yahoo.com>"]
edition = "2018"

[dependencies]
bellman = "0.9.0"
bls12_381 = "0.4.0"
blake2b_simd = "0.5.11"

ark-ec = { version = "^0.2.0", default-features = false }
ark-poly = {version = "^0.2.0", default-features = false }
ark-bls12-381 = { version = "^0.2.0", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { version = "^0.2.0", default-features = false, features = [ "curve" ] }
ark-std = { version = "^0.2.0", default-features = false }
# ark-poly-commit = "0.2.0"
ark-poly-commit = {path="/home/george/Projects/heliax/trusted-setup/poly-commit-heliax"}
ark-ff = { version = "^0.2.0", default-features = false }
ark-serialize = "0.2.0"
pairing = "0.14"
powersoftau = "0.1.0"

[profile.test]
opt-level = 3
