[package]
name = "kzg-setup-powersoftau"
version = "1.0.0"
authors = ["Heliax AG <hello@heliax.dev>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/heliaxdev/kzg-setup-powersoftau"
readme = "README.md"
description = "Loading Powers of Tau as KZG setup parameters."
keywords = ["KZG", "powersoftau", "trusted setup"]
categories = ["cryptography"]

[dependencies]
bellman = "0.9.0"
bls12_381 = "0.4.0"
blake2b_simd = "0.5.11"

ark-ec = { version = "^0.2.0", default-features = false }
ark-poly = {version = "^0.2.0", default-features = false }
ark-bls12-381 = { version = "^0.2.0", default-features = false, features = [ "curve" ] }
ark-bls12-377 = { version = "^0.2.0", default-features = false, features = [ "curve" ] }
ark-std = { version = "^0.2.0", default-features = false }
ark-poly-commit = "0.2.0"
ark-ff = { version = "^0.2.0", default-features = false }
ark-serialize = "0.2.0"
pairing = "0.14"
powersoftau = {git="https://github.com/heliaxdev/powersoftau.git"}
minreq = { version = "2", features = ["https"]}

[profile.test]
opt-level = 3
